check_out.txt
   Compiling aws-lc-rs v1.16.3
    Checking tokio-util v0.7.18
   Compiling rustls v0.23.38
    Checking h2 v0.4.13
    Checking rustls-webpki v0.103.12
   Compiling sqlx-core v0.8.6
    Checking hyper v1.9.0
    Checking netlink-sys v0.8.8
    Checking hyper-util v0.1.20
    Checking tower v0.5.3
   Compiling sqlx-sqlite v0.8.6
    Checking axum v0.8.9
   Compiling sqlx-macros-core v0.8.6
    Checking netlink-request v1.7.1
   Compiling sqlx-macros v0.8.6
    Checking netlink-proto v0.12.0
    Checking fs-err v3.3.0
    Checking tokio-rustls v0.26.4
    Checking wireguard-control v1.7.1
    Checking hickory-proto v0.25.2
    Checking sqlx v0.8.6
    Checking tower-http v0.6.8
    Checking rcgen v0.14.7
    Checking axum-server v0.8.0
    Checking rtnetlink v0.20.0
    Checking axum-extra v0.12.5
    Checking rouman-api v0.1.0 (/opt/rouman/rouman-api)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `log`
   --> rouman-api/src/lib.rs:155:9
    |
155 |         log::info!("Generating self-signed TLS certificates for Compute Agents...");
    |         ^^^ use of unresolved module or unlinked crate `log`

warning: unused import: `StatusCode`
 --> rouman-api/src/auth.rs:3:20
  |
3 |     http::{header, StatusCode},
  |                    ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::database::Database`
 --> rouman-api/src/network/radius.rs:4:5
  |
4 | use crate::database::Database;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> rouman-api/src/network/radius.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `FromRef`
 --> rouman-api/src/dns/mod.rs:1:28
  |
1 | use axum::extract::{State, FromRef};
  |                            ^^^^^^^

warning: unused import: `std::sync::Arc`
 --> rouman-api/src/dns/mod.rs:3:5
  |
3 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> rouman-api/src/database.rs:2:5
  |
2 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> rouman-api/src/network/neighbors.rs:24:9
   |
24 |     let mut neighbors_guard = rdp_state.neighbors.lock().await;
   |         ----^^^^^^^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `rouman-api` (lib) generated 7 warnings
error: could not compile `rouman-api` (lib) due to 1 previous error; 7 warnings emitted
